src/Salesforce/lwc-attachments-filecheck/force-app/main/default/objects/ContentVersion/fields/Data_Quality_Check__c.field-meta.xml
<CustomField>
    <fullName>Data_Quality_Check__c</fullName>
    <label>Data Quality Check</label>
    <length>255</length>
    <type>Text</type>
</CustomField>