src/Salesforce/lwc-attachments-filecheck/force-app/main/default/objects/ContentVersion/fields/Data_Quality_Check_Current__c.field-meta.xml
<CustomField>
    <fullName>Data_Quality_Check_Current__c</fullName>
    <description>Has the data quality check been run since the record was last updated?</description>
    <formula>IF(ISBLANK(Data_Quality_Check_Date_Time__c), FALSE, IF (Data_Quality_Check_Date_Time__c &gt;  LastModifiedDate, TRUE, FALSE))</formula>
    <inlineHelpText>Has the data quality check been run since the record was last updated?</inlineHelpText>
    <label>Data Quality Check Current</label>
    <type>Checkbox</type>
</CustomField>