src/Salesforce/lwc-attachments-filecheck/force-app/main/default/objects/ContentVersion/fields/Data_Quality_Check_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Data_Quality_Check_Date_Time__c</fullName>
    <label>Data Quality Check Date Time</label>
    <type>DateTime</type>
</CustomField>